k8s/accounts-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-management
spec:
  selector:
    app: accounts-management
  ports:
    - port: 8086
      name: web
